# upw

./: .gitignore  .pre-commit-config.yaml  pyproject.toml  requirements.txt
.run/: main.py.run.xml
src/upw/: __main__.py  configuration.py  execution.py  infrastructure.py  logging.py  logic.py  main.py
src/upw/updaters/: archlinux.py  common.py  os.py
